--- a/netty/nettyhello/pom.xml
+++ b/netty/nettyhello/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>protobuf-java-util</artifactId>
             <version>3.11.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.13.0</version>
+        </dependency>
     </dependencies>
 
     <build>
